Resources/public/less/base.less
/*!
 * base.less v1.0.0
 *
 * Copyright 2012 n@mariani
 * For the full copyright and license information, please view the LICENSE
 * file that was distributed with this source code.
 */



/*------------------------------*
 * Twitter Bootstrap less files *
 *------------------------------*/
@import "bootstrap/bootstrap.less";
@import "bootstrap/responsive.less";

/*------------------------------*
 *      BootstrappBundle        *
 *------------------------------*/
// Define new variables or override bootstrap
@import "variables.less";
@import "mixins.less";


// Common
// --------------------
div.inline-children > *,
form.inline-children > * {
    display: inline-block;
    .ie7-inline-block();
}
div.inline {
  display: inline-block;
  .ie7-inline-block();
}

// Dropdown
// --------------------
.nav.dropdown-hover .dropdown:hover > .dropdown-menu {
    display: block;
}
.dropdown-menu {
    min-width: 100px;
    margin:0;
}
// Hover state
.dropdown-menu a:hover,
.dropdown-menu .active a,
.dropdown-menu .active a:hover {
    color: @white;
    text-decoration: none;
    background-color: @baseColor;
}
.dropdown-menu li a:hover > [class^="icon-"],
.dropdown-menu li a:hover > [class*=" icon-"],
.dropdown-menu .active a > [class^="icon-"],
.dropdown-menu .active a > [class*=" icon-"],
.dropdown-menu .active a:hover > [class^="icon-"],
.dropdown-menu .active a:hover > [class*=" icon-"] {
    color: @white;
    background-image: url("@{iconWhiteSpritePath}");
}
// form
.dropdown-menu li form {
    margin:0;
    a {
        display: block;
        padding: 3px 20px;
        clear: both;
        font-weight: normal;
        line-height: @baseLineHeight;
        color: @dropdownLinkColor;
        white-space: nowrap;
    }
}

.nav.locale-dropdown {
    font-size: 13px;
}
.nav.locale-dropdown img {
  margin-top:-2px;
}

.navbar .nav {
  a, p, h1, h2, h3, h4 {
      -webkit-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
  }

}
.navbar .nav li.dropdown.open > .dropdown-toggle,
.navbar .nav li.dropdown.active > .dropdown-toggle,
.navbar .nav li.dropdown.open.active > .dropdown-toggle {
    background-color: transparent;
}

.navbar-inverse li a > [class^="icon-"],
.navbar-inverse li a > [class*=" icon-"] {
  color: @white;
  background-image: url("@{iconWhiteSpritePath}");
}

.nav img {
  max-height: 18px;
}

html, body {
    height: 100%;
}

body {
    #gradient > .directional(#e5e5e5, #f2f2f2);
    background-image: url("../../bootstrapp/images/patterns/whitey/whitey.png");
    background-repeat: repeat;
}

body > .container,
body > .container-fluid {
    min-height: 100%;
}

body > .container > .row,
body > .container-fluid > .row-fluid {
    padding-bottom: 40px;
}
@media screen and (min-width: @navbarCollapseDesktopWidth) {
    body > .container > .row,
    body > .container-fluid > .row-fluid {
        padding-top: 40px;
    }
}

body > footer {
    clear:both;
    margin-top: -40px;
    text-align: center;
    font-size: 13px;
    background: @white;

    > .container,
    > .container-fluid {
        background: @white;
        padding: 10px 12px;
    }

    .locale-dropdown {
        display: inline-block;
        text-align: left;
        font-size: 13px;
        img {
          margin-top: -4px;
          max-height: 20px;
        }
        .dropdown-menu {
            z-index: 0;
            width:190px;
            left: 0;
            right: auto;
            margin-bottom: 5px;
            margin-left: -20px;
            border-radius: 6px 6px 0 0;
            border: none;
            .box-shadow(none);
        }
    }
}

p:last-child {
    margin: 0;
}

// Forms
// --------------------
// read-only inputs not like disabled
div.well input[readonly],
div.well select[readonly],
div.well textarea[readonly] {
  cursor: default;
  background-color: @inputBackground;
}

// override default bootstrap input, texterea & select width to fill the space available
input,
textarea,
select,
.uneditable-input {
  width: 100%;
}

// fix form-horizontal inputs sizing
input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="search"],
input[type="tel"],
input[type="color"],
.uneditable-input {
  box-sizing: border-box;
  height: @inputHeight;
}

input.error {
  border-color: @errorBorder;
  color: @errorText;
}

.form-horizontal {
    input[type="radio"] {
        margin: 0;
        vertical-align: 1px;

        &:not(:first-of-type) {
            margin-left: 10px;
        }

        + .control-label {
            display: inline-block;
            margin-left: 5px;
        }
    }
    .controls .control-label {
        float: none;
        width: auto;
        text-align: left;
    }
}

[data-type="datetime"] {
    .input-append:not(:first-of-type),
    .input-prepend:not(:first-of-type) {
        margin-left: -1px;
    }

    .input-prepend:not(:first-of-type),
    .input-append:not(:last-of-type) {
        .add-on {
            .border-radius(0);
        }
    }

    .input-prepend:not(:last-of-type),
    .input-append:not(:first-of-type) {
       input {
         .border-radius(0);
       }
    }
}

// Thumbnails
// --------------------
.thumbnail {
    background-color: @white;
}

// Maps
// --------------------
.map, .google-maps {
    width: 100%;
    height: 400px;
}

// Forms
// --------------------
.input-block-level {
    &.input-prepend {
        position: relative;
        .add-on:first-child, .btn:first-child {
            position:absolute;
            left: 0;
            z-index: 3;
        }
        input.input-block-level {
            padding-left: 32px;
        }
    }
    &.input-append {
        position: relative;
        .add-on:last-child, .btn:last-child {
            position:absolute;
            right: 0;
            z-index: 3;
        }
        input.input-block-level {
            padding-right: 46px;
        }
    }
}
.select2-container {
    width: 100%;
}

